--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,13 +4,15 @@
 
 .App-header {
   background-color: #033076;
-  min-height: 70px;
+  height: 80px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
   font-size: 1.5em;
+  color: white;
+
 }
 
 .App-intro {
